# jirafrog

./: .gitignore  LICENSE  pyproject.toml
jirafrog/: __init__.py  main.py
