[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jirafrog"
author = "Andrew Magee"
author-email = "amagee@gmail.com"
home-page = "https://github.com/amagee/jirafrog"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

requires = [
    "appdirs~=1.4.4",
    "jira~=2.0.0",
    "blessed~=1.17.10",
    "toml~=0.10.0",
]

[tool.flit.scripts]
jirafrog = "jirafrog:main.main"

        

